js/Components/LogTable.less
.logs {
  width: 100%;
  white-space: normal;
  margin-bottom: 14px;
  table-layout: fixed;

  td, th {
    vertical-align: top;
    border-bottom: 1px solid #ddd;
    padding: .8em;
    text-align: left;
    font-weight: normal;
    position: relative;
  }

  .time {
    width: 100px;
  }

  .app {
    width: 150px;
  }

  .level {
    width: 100px;
  }

  /*info*/
  .level_1 {
    background-color: #BDE5F8;
  }

  /* warning*/
  .level_2 {
    background-color: #FEEFB3;
  }

  /*error*/
  .level_3 {
    background-color: #FFBABA;
  }

  /*fatal*/
  .level_4 {
    background-color: #ff8080;
  }

  div.column {
    box-sizing: border-box;
    padding: 7px;
  }
  
  div.level {
    font-weight: bold;
  }

  div.level, div.app, div.time {
    display: inline-block;
    width: 33%;
  }

  div.time {
    text-align: right;
    padding-right: 20px;
  }

  div.row {
    position: relative;
  }

  div.message {
    border-bottom: 1px solid #888;
  }
}

